// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorMessageHeader should not render "See More" if expanded 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(250, 186, 48, 1)",
          },
        ]
      }
    >
      Warning
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      maxLength={Infinity}
      message={
        Object {
          "content": "#############################################################################################################################################################################################################################################################################################################",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should not render See More button for short content 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(250, 186, 48, 1)",
          },
        ]
      }
    >
      Warning
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      maxLength={Infinity}
      message={
        Object {
          "content": "Short",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render "See More" if collapsed 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(250, 186, 48, 1)",
          },
        ]
      }
    >
      Warning
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      maxLength={300}
      message={
        Object {
          "content": "#############################################################################################################################################################################################################################################################################################################",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
    <Text
      onPress={[Function]}
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.7)",
          "fontSize": 14,
          "fontWeight": "300",
          "lineHeight": 12,
        }
      }
    >
      ... See More
    </Text>
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(243, 83, 105, 1)",
          },
        ]
      }
    >
      Error
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      maxLength={Infinity}
      message={
        Object {
          "content": "Some error message",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render fatal 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(243, 83, 105, 1)",
          },
        ]
      }
    >
      Fatal Error
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      maxLength={Infinity}
      message={
        Object {
          "content": "Some fatal message",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;

exports[`LogBoxInspectorMessageHeader should render syntax error 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(51, 51, 51, 1)",
      "flex": 0,
      "shadowColor": "#000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.5,
      "shadowRadius": 2,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 5,
        "marginTop": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "flex": 1,
            "fontSize": 20,
            "fontWeight": "600",
            "includeFontPadding": false,
            "lineHeight": 28,
          },
          Object {
            "color": "rgba(243, 83, 105, 1)",
          },
        ]
      }
    >
      Syntax Error
    </Text>
  </View>
  <Text
    style={
      Object {
        "color": "rgba(255, 255, 255, 1)",
        "fontSize": 14,
        "fontWeight": "500",
        "includeFontPadding": false,
        "lineHeight": 20,
        "paddingBottom": 10,
        "paddingHorizontal": 12,
      }
    }
  >
    <LogBoxMessage
      maxLength={Infinity}
      message={
        Object {
          "content": "Some syntax error message",
          "substitutions": Array [],
        }
      }
      style={
        Object {
          "color": "rgba(255, 255, 255, 0.6)",
        }
      }
    />
  </Text>
</View>
`;
